[package]
name = "tubefeeder"
description = "A YouTube, LBRY and PeerTube client"
homepage = "https://tubefeeder.de"
version = "1.11.0"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.9", package = "gtk4" }
gdk-pixbuf = "0.15.10"
gdk = { version = "0.4.8", package = "gdk4" }
pango = "0.15.10"
libadwaita = { version = "0.2.0-alpha.3", features = ["v1_2"]}

tokio = {version = "1.17.0", features = ["full"]}
futures = "0.3.21"
regex = "1.5.5"
chrono = { version = "0.4.19" }
csv = "1.1.6"
reqwest = "0.11.10"

log = "0.4.14"
env_logger = "0.9.0"

image = "0.24.1"
once_cell = "1.10.0"

gettext-rs = "0.7.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tf_core = "0.1.3"
tf_join = "0.1.5"
tf_filter = "0.1.2"
tf_observer = "0.1.2"
tf_playlist = "0.1.3"
tf_yt = { package = "tf_platform_youtube", version = "0.1.6" }
tf_pt = { package = "tf_platform_peertube", version = "0.1.4" }
tf_lbry = { package = "tf_platform_lbry", version = "0.1.3" }
