[package]
name = "tubefeeder"
description = "Watch YouTube, LBRY, and PeerTube videos in one place"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
homepage = "https://mobile.schmidhuberj.de/pipeline"
repository = "https://github.com/Tubefeeder/Pipeline"
version = "1.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4" }
gdk-pixbuf = "0.17.10"
gdk = { version = "0.6.3", package = "gdk4" }
pango = "0.15.10"
libadwaita = { version = "0.4.4", features = ["v1_2"]}

tokio = {version = "1.29.1", features = ["full"]}
futures = "0.3.28"
regex = "1.9.1"
chrono = { version = "0.4.26" }
csv = "1.2.2"
reqwest = "0.11.18"

log = "0.4.19"
env_logger = "0.9.3"

image = "0.24.6"
once_cell = "1.18.0"

gettext-rs = "0.7.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tf_core = "0.1.4"
tf_join = "0.1.7"
tf_filter = "0.1.3"
tf_observer = "0.1.3"
tf_playlist = "0.1.4"
tf_yt = { package = "tf_platform_youtube", version = "0.1.7" }
tf_pt = { package = "tf_platform_peertube", version = "0.1.5" }
tf_lbry = { package = "tf_platform_lbry", version = "0.1.4" }
